test/e2e/testdata/ratelimit-path-match.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-path-match
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-path-match
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: path-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - path:
                type: PathPrefix
                value: "/get/specific-path"
          limit:
            requests: 3
            unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-path-match
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: infra-backend-v1
          port: 8080
